--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <ul id="cat-list"></ul>
     <div id="cat">
 
-        <h2 id="cat-name"></h2>
-        <div id="cat-count"></div>
-        <img id="cat-img" src="" alt="cute cat">
+        <h2 data-bind="text:name" id="cat-name"></h2>
+        <div data-bind="text:clickCount" id="cat-count"></div>
+        <h3 data-bind="text:level" id="cat-level"></h3>
+        <img data-bind="click:incrementCounter, attr:{src: imgSrc}" id="cat-img" alt="cute cat">
 
     </div>
     <script src="js/lib/knockout-3.2.0.js"></script>
